# reactive

./: CMakeLists.txt
.github/workflows/: unit-tests.yml
include/: Latch.h
include/reactive/: Computation.h  Computations.h  Deferrable.h  Deferrer.h  Latch.h  Var.h
src/: Computation.cpp  Computation.h  Computations.cpp  ComputationsImpl.cpp  ComputationsImpl.h  Deferrer.cpp  Invalidateable.h  Var.cpp
tests/: CMakeLists.txt  LatchTests.cpp  OrderingTests.cpp  ReactiveTests.cpp  TeardownTests.cpp
